feat: improvements on Importers (#3614)